# lqr-for-inverted-pendulum

./: README.md
matlabcode/: IP_Animation.m  IP_LQR_code.m  IP_SwingUp_Lqr_Control.m  Inverted_Pendulum2ode.m  RK4_2nd_order.m  ReadMe.txt  license.txt  volt2force.m
report/: control.txt  pendulum_angle.txt  pendulum_velocity.txt  position_cart.txt  velocity_cart.txt
webots/controllers/lqr/: CMakeLists.txt
webots/controllers/lqr/src/: lqr.c  plot.py
webots/worlds/: .inverted_pendulum.wbproj  inverted_pendulum.wbt
